List of WorldCondition; aoe shearing.